# EOM-loop

./: .gitignore  CMakeLists.txt  L_ops.py  README.md  R_ops.py  error-analyze.py  get_energy.py  hamiltonian.py  imps-eom-loop.py  imps-ion-trap-ne.py  imps-ion-trap.py  imps-ne-new.py  imps-ne.py  imps.py  ising.py  kraus.py  main.cpp  main.py  main2.py  matrix_A.cpp  matrix_U.cpp  matrix_U_cpp_checker.py  measure_device.py  mps-ne.py  mps.py  opt_tools.py  simple_update.py  tools.py
example/: exact.py  fidelity.py  mera-d2-heisenberg.py  mera-d2-ising.py  mera-heisenberg.py  mera-ising.py  mera-np-heisenberg.py  mera-np-ising.py  mera-x4-heisenberg.py  mera-x4-ising.py  mera-x6-heisenberg.py  mera-x6-ising.py  mps-heisenberg-nopost.py  mps-heisenberg.py  mps-ising-nopost.py  mps-ising.py  mps_heisenberg.py  sample-mera-x6-heisenberg.py  sample-mps-heisenberg.py
han/systems/: abstract_system.py  heisenberg.py  inner_product.py  ising.py  mera_eom.py  mera_eom_with_d2_post.py  mera_eom_with_x4_post.py  mera_eom_with_x6_post.py  mps_eom.py  mps_eom_with_d2_post.py  mps_eom_with_x4_post.py  mps_eom_without_post.py
han/systems/old/: mps-eom-loop.py
han/utility/: storage_function.py  tensor_U.py
han/utility/old/: tools.py
han2/: __init__.py  tensor_U.py
src/: CMakeLists.txt
